examples/tests/invalid/cloud_function_expects_inflight.w
bring cloud;

new cloud.Function((name: str): str => {
    return "Hello ${name}";
});
// ^ Expected type to be "inflight (any): any", but got "preflight (str): str" instead
